feat(user-signup): implement user registration
- add user signup functionality
- add dependencies to the package.json
- add test for the functionality
- fixes the testing script
- fixes the env import error

[Starts #168131412]
